# master-thesis

./: .gitignore  README.md
code/: CMakeLists.txt  clean.sh  compile_and_run.sh  fast_compile_and_run.sh
code/include/algorithm/: Algorithm.hpp  IAlgorithm.hpp
code/include/core/: Application.hpp  Parameters.hpp  ParametersGetter.hpp
code/include/debug/: IImagePrinter.hpp  ImagePrinter.hpp
code/include/filehandler/: ConfigurationFileReader.hpp  FileHandler.hpp  IFileHandler.hpp  IPathManager.hpp  PathManager.hpp
code/include/filtration/: ApplyBilateralFilter.hpp  ApplyGaussianFilter.hpp  ConvertToBlackAndWhite.hpp  Dilation.hpp  ElliminateWhiteNoise.hpp  Erosion.hpp  IFiltrationAlgorithm.hpp  RemoveLonePixels.hpp  Threshold.hpp  UnsharpMask.hpp
code/include/segmentation/: ColorSegmentation.hpp  ISegmentationAlgorithm.hpp  LineDetection.hpp
code/include/segmentation/helpers/: Color.hpp  ColorAlignment.hpp  ColorContainer.hpp  ColorGroup.hpp  ContourColorRestoration.hpp  ContourMerge.hpp  HolesRemoval.hpp  ImageGenerator.hpp  LayerMerge.hpp
code/resources/conf/: config.xml
code/src/: CMakeLists.txt
code/src/algorithm/: Algorithm.cpp
code/src/app/: main.cpp
code/src/core/: Application.cpp  ParametersGetter.cpp
code/src/debug/: ImagePrinter.cpp
code/src/filehandler/: ConfigurationFileReader.cpp  FileHandler.cpp  PathManager.cpp
code/src/filtration/: ApplyBilateralFilter.cpp  ApplyGaussianFilter.cpp  ConvertToBlackAndWhite.cpp  Dilation.cpp  ElliminateWhiteNoise.cpp  Erosion.cpp  RemoveLonePixels.cpp  Threshold.cpp  UnsharpMask.cpp
code/src/segmentation/: ColorSegmentation.cpp  LineDetection.cpp
code/src/segmentation/helpers/: Color.cpp  ColorAlignment.cpp  ColorContainer.cpp  ColorGroup.cpp  ContourColorRestoration.cpp  ContourMerge.cpp  HolesRemoval.cpp  ImageGenerator.cpp  LayerMerge.cpp
code/test/: main.cpp
doc/: document.tex
